--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-	"mysqlConnectionString":"mysql://x9ll9bau5p4f9gt7:dem4enbecbkrvri5@lmag6s0zwmcswp5w.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/t552aveoqrp2w1qh",
+	"mysqlConnectionString":"mysql://qv6hlv3xrfkbop5c:hsanivpca7np1b4o@ctgplw90pifdso61.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/hy3ck4npzxefsxdy",
 	"discoveryURL":"https://gateway.watsonplatform.net/discovery/api",
 	"discoveryAPI":"jAr_nqGt60U3je0qn01z5HUwUOllcY9K2ngTjGxDboV9",
 	"discoveryEnvironmentID":"9f20a2eb-0b23-47d2-8fbc-66cf2f1f4faa",
